# retronavi

./: .gitignore  README.md  USTAWIENIA.md  generate_dolnoslaskie.sh  generate_map.sh  release.sh
.github/workflows/: generate-map.yml
navit/: CMakeLists.txt  android.c  build.gradle  builtin_android.c  file.c  graphics.c  main.c  navit.c  navit.h  search.c  start_real.c
navit/android/: AndroidManifest.xml  build.gradle
navit/android-about-page/: build.gradle
navit/android-support-animated-vector-drawable/: build.gradle
navit/android-support-annotations/: build.gradle
navit/android-support-compat/: build.gradle
navit/android-support-core-ui/: build.gradle
navit/android-support-core-utils/: build.gradle
navit/android-support-design/: build.gradle
navit/android-support-fragment/: build.gradle  local.properties
navit/android-support-v4/: build.gradle
navit/android-support-v7-appcompat/: build.gradle
navit/android-support-v7-recyclerview/: build.gradle
navit/android-support-vector-drawable/: build.gradle
navit/android/res/menu/: actionbaricons.xml
navit/android/res/values/: strings.xml  themes_main.xml
navit/android/res/values-pl/: strings.xml
navit/android/res/xml/: preferences.xml
navit/android/src/com/zoffcc/applications/logging/: Logging.java
navit/android/src/com/zoffcc/applications/zanavi/: Navit.java  NavitSpeech2.java  NavitTextTranslations.java  RetroNaviAppUpdateService.java  RetroNaviLogViewerActivity.java  RetroNaviLogger.java  RetroNaviMapDownloadService.java  RetroNaviMapUpdater.java  RetroNaviTls12.java  RetroNaviUpdater.java  ZANaviAboutPage.java  ZANaviMainIntroActivityStatic.java  ZANaviPrefs.java
navit/appintro/: build.gradle
navit/gradle/wrapper/: gradle-wrapper.properties
navit/maptool/: maptool.h
navit/material-intro/: build.gradle
po_zanavi/zanavi/: zanavi-pl.po
